--- a/module-admin/src/main/resources/templates/roles/roleView.html
+++ b/module-admin/src/main/resources/templates/roles/roleView.html
@@ -5,7 +5,7 @@
                 <strong>역할구조</strong>
             </h5>
             <div class="col-12 col-md-6 mb-3 text-right">
-                <button type="button" id='rootRoleInsertBtn' class="btn btn-primary">루트 역할 등록</button>
+                <button type="button" id='rootRoleInsertBtn' class="btn btn-transparent">루트 역할 등록</button>
             </div>
         </div>
         <div class="card">
